@@ -15,6 +15,8 @@ displays=default-display
 #
 # Display configuration
 #
+# language = Default language to use in greeter and in sessions
+# layout = Default keyboard layout to use in greeter and in sessions
 # session = Default session
 # default-user = Username of default user to log in as
 # default-user-timeout = Delay before logging in in seconds (use 0 for automatic login)
@@ -24,6 +26,8 @@ displays=default-display
 # key = Authentication key to use
 #
 [default-display]
+#language=en_US.utf8
+#layout=us
 #session=gnome
 #default-user=bob
 #default-user-timeout=5
