@@ -99,10 +99,11 @@ ldm_greeter_get_integer_property
 ldm_greeter_get_boolean_property
 ldm_greeter_get_num_users
 ldm_greeter_get_users
+ldm_greeter_get_default_language
 ldm_greeter_get_languages
-ldm_greeter_get_language
-ldm_greeter_get_layout
+ldm_greeter_get_default_layout
 ldm_greeter_get_layouts
+ldm_greeter_get_layout
 ldm_greeter_set_layout
 ldm_greeter_get_sessions
 ldm_greeter_get_default_session
