@@ -6,6 +6,7 @@ Overview of changes in lightdm 0.1.3
     * Do cross fade for sessions that support it
       (set X-LightDM-Supports-Transitions=true in their xsession file)
     * Load user settings from ~/.dmrc
+    * Add configuration for default language/layout
 
 Overview of changes in lightdm 0.1.2
 
